added authentication and authorization

--- a/ToDoListMinimalAPI/appsettings.json
+++ b/ToDoListMinimalAPI/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+  "JwTIssuer": "https://todolistminimalapi.pl",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
